Salesforce/main/default/objects/Referencia_de_Preco_sugerido__c/Referencia_de_Preco_sugerido__c.object-meta.xml
<CustomObject>
    <label>Referencia de Preço Sugerido</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Numero de Preço Sugerido</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referencias de Preço Sugerido</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>