Salesforce/main/default/objects/Referencia_de_Preco_sugerido__c/fields/Regiao_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Regiao_Comercial__c</fullName>
    <label>Região Comercial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REGION 1</fullName>
            </value>
            <value>
                <fullName>REGION 2</fullName>
            </value>
            <value>
                <fullName>CERRADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>