Salesforce/main/default/objects/Referencia_de_Preco_sugerido__c/fields/Safra__c.field-meta.xml
<CustomField>
    <fullName>Safra__c</fullName>
    <description>Campos clave: Safra+Variedade+Região
Campo dependiente:Preço</description>
    <inlineHelpText>Campos clave: Safra+Variedade+Região
Campo dependiente:Preço</inlineHelpText>
    <label>Safra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Safra</valueSetName>
    </valueSet>
</CustomField>