Salesforce/main/default/objects/Referencia_de_Preco_sugerido__c/fields/Variedade__c.field-meta.xml
<CustomField>
    <fullName>Variedade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campos clave: Safra+Variedade+Região
Campo dependiente:Preço</description>
    <inlineHelpText>Campos clave: Safra+Variedade+Região
Campo dependiente:Preço</inlineHelpText>
    <label>Variedade</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>Referencias de Preço Sugerido</relationshipLabel>
    <relationshipName>Referencias_de_Pre_o_Sugerido</relationshipName>
    <type>Lookup</type>
</CustomField>